# zephyr-workshop

./: .devcontainer.json  .gitignore  Dockerfile  LICENSE  container-attach.sh  install-udev-rules.sh  post-create.sh  run-tests-hw.sh  run-tests-sim.sh  usb-attach.sh  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: native_sim.overlay
app/dts/bindings/: buzzer.yaml  pwm-sim.yaml  sensor-sim.yaml
app/src/: BuzzerController.cpp  BuzzerController.hpp  SensorReader.cpp  SensorReader.hpp  buzzer_ctrl.c  buzzer_ctrl.h  frequency.c  frequency.h  main.c  main.cpp  sensor_ctrl.c  sensor_ctrl.h
app/src/cpp_wrappers/: Accelerometer.hpp  ApplicationAssert.cpp  ApplicationAssert.hpp  Buzzer.hpp  MessageQueue.hpp  Semaphore.hpp  SoftwareTimer.hpp  Thread.hpp
app/src/drivers/: buzzer.c  buzzer.h  pwm_sim.c  sensor_sim.c
app/tests/controller_reader/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/controller_reader/src/: BuzzerControllerTest.cpp  main.cpp
app/tests/frequency/: CMakeLists.txt  testcase.yaml
app/tests/frequency/src/: test_frequency.c
boards/demo/: Kconfig.demo  board.yml  demo.dts  demo.yaml  demo_defconfig
dts/bindings/: buzzer.yaml  fake-sensor.yaml
sim/: CMakeLists.txt  prj.conf
sim/src/: main.c
tests/sensor_ctrl/: CMakeLists.txt  app.overlay  testcase.yaml
tests/sensor_ctrl/src/: main.c  sensor_fake.c  sensor_fake.h
west-manifest/: west.yml
zephyr/: module.yml
